# markovpp

./: .gitignore  CMakeLists.txt  Demo.cpp  LICENSE  README.md  example.txt
demo/: Demo.cpp  example.txt
include/: Markovpp.cpp  Markovpp.h
src/: Markovpp.cpp
